<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="prefScreen">

    <!-- TODO: try include with <intent android:action="com.example.PREFERENCE_2" /> -->

    <PreferenceCategory
        android:key="func_tweaks"
        android:title="@string/functionality_title">

        <EditTextPreference
            android:defaultValue="@string/default_min_percent"
            android:inputType="number"
            android:key="percent_start"
            android:summary="@string/percentStartDesc"
            android:title="@string/percentStartLabel" />

        <EditTextPreference
            android:defaultValue="@string/default_max_percent"
            android:inputType="number"
            android:key="percent_max"
            android:summary="@string/percentLimitDesc"
            android:title="@string/percentLimitLabel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="tax_box"
            android:summary="@string/disabledTaxDesc"
            android:title="@string/toggleTaxLabel" />

        <EditTextPreference
            android:defaultValue="6"
            android:inputType="numberDecimal"
            android:key="tax_input"
            android:summary="@string/taxDesc"
            android:title="@string/taxLabel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="after_box"
            android:summary="@string/disabledAfterTaxDesc"
            android:title="@string/afterTaxLabel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="save_box"
            android:summary="@string/disabledSaveDesc"
            android:title="@string/saveLabel" />

        <ListPreference
            android:defaultValue="Split tip"
            android:entries="@array/splitOptions"
            android:entryValues="@array/splitValues"
            android:key="split_list"
            android:summary="@string/splitDesc"
            android:title="@string/splitLabel" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="des_tweaks"
        android:title="@string/design_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="combined_box"
            android:summary="@string/disabledCombinedDesc"
            android:title="@string/combinedLabel" />

        <ListPreference
            android:defaultValue="Light"
            android:entries="@array/themeOptions"
            android:entryValues="@array/themeValues"
            android:key="theme_list"
            android:summary="@string/themeDesc"
            android:title="@string/themeLabel" />

        <ListPreference
            android:defaultValue="Dynamic"
            android:entries="@array/colorOptions"
            android:entryValues="@array/colorValues"
            android:key="color_list"
            android:summary="@string/colorDesc"
            android:title="@string/colorLabel" />

    </PreferenceCategory>

</PreferenceScreen>