<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CostActivity">

    <TextView
        android:id="@+id/costTitle"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/costTitle"/>

    <TextView
        android:id="@+id/dollar"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costTitle"
        android:layout_marginTop="@dimen/between_margin"
        android:layout_toLeftOf="@+id/cost"
        android:layout_toStartOf="@+id/cost"
        android:text="@string/money_sign" />

    <EditText
        android:id="@+id/cost"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costTitle"
        android:layout_alignBaseline="@+id/dollar"
        android:layout_centerHorizontal="true"
        android:hint="@string/enterCost"
        android:inputType="numberDecimal"
        android:maxLength="9"
        android:lines="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/next"
        style="@style/NormalText"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/top_margin"
        android:padding="10dp"
        android:text="@string/nextButton"
        android:onClick="next" />

</RelativeLayout>