<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CostFragment">

    <TextView
        android:id="@+id/costTitle"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/costTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollar"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_margin"
        android:text="@string/money_sign"
        app:layout_constraintRight_toLeftOf="@id/cost"
        app:layout_constraintTop_toBottomOf="@id/costTitle" />

    <EditText
        android:id="@+id/cost"
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enterCost"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLength="9"
        app:layout_constraintBaseline_toBaselineOf="@id/dollar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:onClick="advanceFromCost"
        android:text="@string/nextButton"
        android:textSize="@dimen/btn_tx_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost" />

</android.support.constraint.ConstraintLayout>